# generalized_gross_pitaevskii

./: pyproject.toml
src/generalized_gross_pitaevskii/: __init__.py
